--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-treeview",
+  "name": "goformz-react-treeview",
   "version": "0.4.2",
   "description": "Easy, light, flexible tree view made with React.",
   "main": "lib/react-treeview.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chenglou/react-treeview.git"
+    "url": "https://github.com/goformz/react-treeview.git"
   },
   "keywords": [
     "facebook",
@@ -31,9 +31,9 @@
   "author": "chenglou <chenglou92@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chenglou/react-treeview/issues"
+    "url": "https://github.com/goformz/react-treeview/issues"
   },
-  "homepage": "https://github.com/chenglou/react-treeview",
+  "homepage": "https://github.com/goformz/react-treeview",
   "peerDependencies": {
     "react": ">=0.12.0 || ^0.14.0-rc1"
   },
